--- a/Cake.Tools.ReadyAPI.TestEngine/Cake.Tools.ReadyAPI.TestEngine.csproj
+++ b/Cake.Tools.ReadyAPI.TestEngine/Cake.Tools.ReadyAPI.TestEngine.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Version>1.0.0</Version>
+    <VersionPrefix>1.1.0</VersionPrefix>
+    <VersionSuffix>alpha</VersionSuffix>
   </PropertyGroup>
 
   <PropertyGroup>
