The "Publish To Nuget" action requires a <Version> tag.

--- a/Cake.Tools.ReadyAPI.TestEngine/Cake.Tools.ReadyAPI.TestEngine.csproj
+++ b/Cake.Tools.ReadyAPI.TestEngine/Cake.Tools.ReadyAPI.TestEngine.csproj
@@ -1,8 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <VersionPrefix>1.1.0</VersionPrefix>
-    <VersionSuffix>alpha</VersionSuffix>
+    <Version>1.1.0-alpha</Version>
   </PropertyGroup>
 
   <PropertyGroup>
