--- a/Cake.Tools.ReadyAPI.TestEngine/Cake.Tools.ReadyAPI.TestEngine.csproj
+++ b/Cake.Tools.ReadyAPI.TestEngine/Cake.Tools.ReadyAPI.TestEngine.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Version>1.1.0-alpha</Version>
+    <Version>1.1.0-alpha1</Version>
   </PropertyGroup>
 
   <PropertyGroup>
     <Description>Cake.Tools.ReadyAPI.TestEngine allows for the build time integration of ReadyAPI automated testing via TestEngine.</Description>
     <Authors>Will Axtell</Authors>
-    <TargetFrameworks>netstandard2.0;net46</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net46;net50</TargetFrameworks>
     <DebugType>portable</DebugType>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
@@ -29,21 +29,17 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/waxtell/Cake.Tools.ReadyAPI.TestEngine.git</RepositoryUrl>
-    <PackageReleaseNotes>1.1.0- Add preliminary support for EndPoint and TreatFailedRunAsError (pending SmartBear approval)
+    <PackageReleaseNotes>1.1.0.1- Update to latest Cake packages
+      1.1.0- Add preliminary support for EndPoint and TreatFailedRunAsError (pending SmartBear approval)
       1.0.0- Initial release
     </PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-    <PackageReference Include="Cake.Core" Version="0.38.5">
+    <PackageReference Include="Cake.Core" Version="1.0.0">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net46' ">
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
 
   <ItemGroup>
